[tool.poetry]
name = "bugyo-cloud-proxy"
version = "0.1.0"
description = "OBC Bugyo Cloud proxy"
authors = ["sengokyu <sengokyu+gh@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
bugyocloudclient = "^0.2.1"

[tool.poetry.dev-dependencies]
pytest-mock = "^3.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
