[tool.poetry]
name = "bugyo-cloud-proxy"
version = "0.1.0"
description = "OBC Bugyo Cloud proxy"
authors = ["sengokyu <sengokyu+gh@gmail.com>"]
homepage = "https://github.com/sengokyu/bugyo-cloud-proxy"
repository = "https://github.com/sengokyu/bugyo-cloud-proxy"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
bugyocloudclient = "^0.3.0"

[tool.poetry.dev-dependencies]
pytest-mock = "^3.4.0"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
